--- a/Makefile.in
+++ b/Makefile.in
@@ -6,30 +6,32 @@ OBJECTS=nbtscan.o statusq.o range.o list.o
 DEFS=@DEFS@
 TARGET=@TARGET@
 
+srcdir = @srcdir@
+
 prefix      = @prefix@
 exec_prefix = @exec_prefix@
 BINDIR      = @bindir@
 
-nbtscan: $(OBJECTS)
-	$(CC) $(CFLAGS) -o nbtscan $(OBJECTS) $(LIBS)
+$(TARGET): $(OBJECTS)
+	$(CC) $(CFLAGS) -o $@ $(OBJECTS) $(LIBS)
 
 install:
 	$(INSTALL) $(TARGET) $(BINDIR)/$(TARGET)
 
-nbtscan.o: nbtscan.c statusq.h range.h list.h
-	$(CC) $(CFLAGS) $(DEFS) -c nbtscan.c
+nbtscan.o: $(srcdir)/nbtscan.c $(srcdir)/statusq.h $(srcdir)/range.h $(srcdir)/list.h
+	$(CC) $(CFLAGS) $(DEFS) -c $<
 
-statusq.o: statusq.c statusq.h
-	$(CC) $(CFLAGS) $(DEFS) -c statusq.c
+statusq.o: $(srcdir)/statusq.c $(srcdir)/statusq.h
+	$(CC) $(CFLAGS) $(DEFS) -c $<
 
-range.o: range.c range.h
-	$(CC) $(CFLAGS) $(DEFS) -c range.c
+range.o: $(srcdir)/range.c $(srcdir)/range.h
+	$(CC) $(CFLAGS) $(DEFS) -c $<
 
-list.o: list.c list.h
-	$(CC) $(CFLAGS) $(DEFS) -c list.c
+list.o: $(srcdir)/list.c $(srcdir)/list.h
+	$(CC) $(CFLAGS) $(DEFS) -c $<
 
 clean:
-	-rm $(OBJECTS) nbtscan
+	-rm $(OBJECTS) $(TARGET)
 
 distclean: clean
 	-rm config.cache config.log config.status Makefile
